Compilation: introduce `simple-executable` tag
It's used to mark the tests that are satisfied with the default
`revng-qa.compiled` toolchain.

Before now every sources with an architecture tag (i.e. x86-64)
was treated as that. From this point on, it's opt-in.

--- a/share/revng/test/configuration/revng-qa/compile.yml
+++ b/share/revng/test/configuration/revng-qa/compile.yml
@@ -1,11 +1,13 @@
 tags:
+  - name: simple-executable
+
   - name: stripped
   - name: with-debug-info
 commands:
   - type: revng-qa.compiled-with-debug-info
     from:
       - type: source
-        filter: linux
+        filter: linux and simple-executable
     command: ${TRIPLE}gcc $INPUT -o $OUTPUT $CFLAGS
   - type: revng-qa.compiled-stripped
     from:
