--- a/share/revng/test/configuration/revng-qa/for-detect-stack-size.yml
+++ b/share/revng/test/configuration/revng-qa/for-detect-stack-size.yml
@@ -8,6 +8,6 @@ tags:
         - -O1
         - -fno-stack-protector
 sources:
-  - tags: [native, dynamic, for-detect-stack-size]
+  - tags: [simple-executable, native, dynamic, for-detect-stack-size]
     members:
       - share/revng/test/tests/analysis/DetectStackSize/dynamic_native/stackframe.c
