--- a/share/revng/test/configuration/revng-qa/for-restructure-cfg.yml
+++ b/share/revng/test/configuration/revng-qa/for-restructure-cfg.yml
@@ -1,6 +1,6 @@
 tags:
   - name: for-restructure-cfg
 sources:
-  - tags: [x86-64, static, for-restructure-cfg]
+  - tags: [simple-executable, x86-64, static, for-restructure-cfg]
     members:
       - share/revng/test/tests/analysis/RestructureCFGPass/x86_64/throttle.c
