ABI: introduce basic multi-style support

--- a/scripts/abi_artifact_generator/config/architectures.yml
+++ b/scripts/abi_artifact_generator/config/architectures.yml
@@ -3,6 +3,8 @@
   register_type: uint64_t
   register_size: 8
   register_list: [rax, rbx, rcx, rdx, rsi, rdi, r8, r9, r10, r11, r12, r13, r14, r15]
+  stack_pointer: rsp
+  styles: [gcc, msvc]
   templates:
     call_a_function: |
       call {{ function_name }}
@@ -26,6 +28,8 @@
   register_type: uint32_t
   register_size: 4
   register_list: [eax, ebx, ecx, edx, esi, edi]
+  styles: [gcc, msvc]
+  stack_pointer: esp
   templates:
     call_a_function: |
       call {{ function_name }}
@@ -49,6 +53,8 @@
   register_type: uint64_t
   register_size: 8
   register_list: [x0, x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11, x12, x13, x14, x15, x16, x17, x18, x19, x20, x21, x22, x23, x24, x25, x26, x27, x28, x29]
+  stack_pointer: sp
+  styles: [gcc]
   templates:
     call_a_function: |
       bl {{ function_name }}
@@ -76,6 +82,8 @@
   register_type: uint32_t
   register_size: 4
   register_list: [r0, r1, r2, r3, r4, r5, r6, r7, r8, r9, r10, r11, r12]
+  stack_pointer: sp
+  styles: [gcc]
   templates:
     call_a_function: |
       bl {{ function_name }}
