--- a/share/revng/test/configuration/revng-qa/for-collect-cfep.yml
+++ b/share/revng/test/configuration/revng-qa/for-collect-cfep.yml
@@ -1,7 +1,7 @@
 tags:
   - name: for-collect-cfep
     variables:
-      CFLAGS:
+      GCC_CFLAGS:
         - -nostartfiles
         - -fuse-ld=bfd
         - -Wl,--section-start=.text=0xAB00000000
