--- a/share/revng/test/configuration/revng-qa/for-decompilation.yml
+++ b/share/revng/test/configuration/revng-qa/for-decompilation.yml
@@ -1,7 +1,7 @@
 tags:
   - name: for-decompilation
     variables:
-      CFLAGS:
+      GCC_CFLAGS:
         - -fno-inline
         - -O2
 sources:
