--- a/share/revng/test/configuration/revng-qa/for-import-pe.yml
+++ b/share/revng/test/configuration/revng-qa/for-import-pe.yml
@@ -5,13 +5,13 @@
 tags:
   - name: windows
     variables:
-      CFLAGS:
+      MSVC_CFLAGS:
         - /DEBUG:FULL
         - /Z7
         - /EHsc
         - /WX
         - /nologo
-      LDFLAGS:
+      MSVC_LDFLAGS:
         - /NOLOGO
         - /WX
 sources:
@@ -29,7 +29,7 @@ commands:
         filter: windows
     pool: wine
     command: |-
-      timeout 30 i386-winsdk-vc16-cl z:\$INPUT /Fe$OUTPUT $CFLAGS /link $LDFLAGS
+      timeout 60 i386-winsdk-vc16-cl z:\$INPUT /Fe$OUTPUT $MSVC_CFLAGS /link $MSVC_LDFLAGS
   - type: revng-qa.generated-pdb
     from:
       - type: source
@@ -37,4 +37,4 @@ commands:
     suffix: .pdb
     pool: wine
     command: |-
-      timeout 30 i386-winsdk-vc16-cl z:\$INPUT $CFLAGS /link /pdb:$OUTPUT $LDFLAGS
+      timeout 60 i386-winsdk-vc16-cl z:\$INPUT $MSVC_CFLAGS /link /pdb:$OUTPUT $MSVC_LDFLAGS
