--- a/share/revng/test/configuration/revng-qa/for-segregate-stack-accesses.yml
+++ b/share/revng/test/configuration/revng-qa/for-segregate-stack-accesses.yml
@@ -1,7 +1,7 @@
 tags:
   - name: for-segregate-stack-accesses
     variables:
-      CFLAGS:
+      GCC_CFLAGS:
         - -fno-unroll-loops
         - -fno-inline
         - -O1
