--- a/share/revng/test/configuration/revng-qa/runtime.yml
+++ b/share/revng/test/configuration/revng-qa/runtime.yml
@@ -3,7 +3,7 @@ tags:
   - name: for-comparison
   - name: for-runtime
     variables:
-      CFLAGS:
+      GCC_CFLAGS:
         - -std=c99
         - -fno-pic
         - -fno-pie
