Reorganize `PE` tests and enable `vc19` toolchain

--- a/share/revng/test/configuration/revng-qa/architectures.yml
+++ b/share/revng/test/configuration/revng-qa/architectures.yml
@@ -1,5 +1,16 @@
 tags:
   - name: linux
+  - name: windows
+    variables:
+      MSVC_CFLAGS:
+        - -WX # treats warnings as errors
+        - -nologo # supresses startup banner
+      MSVC_LDFLAGS:
+        # Sadly, msvc linker only supports `/`-style parameters.
+        - /debug # creates debug information
+        - /nologo # supresses startup banner
+        - /wx # treats warnings as errors
+
   - name: compiler
     variables:
       GCC_CFLAGS:
