Add msvc test support

--- a/share/revng/test/configuration/revng-qa/for-runtime-abi-tests.yml
+++ b/share/revng/test/configuration/revng-qa/for-runtime-abi-tests.yml
@@ -122,6 +122,10 @@ sources:
   - tags: [for-runtime-abi-tests]
     repeat-for:
       - [x86-64-systemv-abi]
+
+      - [x86-64-microsoft-abi, windows]
+      - [x86-64-vectorcall-microsoft-abi, windows]
+
       - [i386-systemv-abi]
       - [i386-regparm-3-systemv-abi]
       - [i386-regparm-2-systemv-abi]
@@ -129,7 +133,15 @@ sources:
       - [i386-cdecl-microsoft-abi]
       - [i386-fastcall-microsoft-abi]
       - [i386-stdcall-microsoft-abi]
+
+      - [i386-cdecl-microsoft-abi, windows]
+      - [i386-fastcall-microsoft-abi, windows]
+      - [i386-stdcall-microsoft-abi, windows]
+      - [i386-vectorcall-microsoft-abi, windows]
+
+      # TODO: re-enable once arm64 support is fixed.
       # - [aarch64-aapcs64-abi]
+
       - [arm-aapcs-abi]
     members:
       - share/revng/test/tests/abi/
@@ -138,12 +150,36 @@ commands:
   - type: revng-qa.runtime-abi-tests
     from:
       - type: source
-        filter: for-runtime-abi-tests
+        filter: for-runtime-abi-tests and !windows
     suffix: /
     command: |-
-      "${INPUT}/build-abi-test-binaries.sh"
+      "${INPUT}/build_abi_test_binaries_with_gcc.sh"
         "${INPUT}"
         "${OUTPUT}"
         "${TRIPLE}"
         "${GCC_CFLAGS} ${COMMON_CFLAGS}"
         "${OBJDUMP_FLAGS}"
+
+  - type: revng-qa.runtime-abi-tests
+    from:
+      - type: source
+        filter: for-runtime-abi-tests and windows
+    suffix: /
+    pool: wine
+    command: |-
+      if [[ "${QEMU_NAME}" =~ ^x86_64$$ ]]; then
+        MSVC_TRIPLE="x86_64-winsdk-vc19-";
+      elif [[ "${QEMU_NAME}" =~ ^i386$$ ]]; then
+        MSVC_TRIPLE="i386-winsdk-vc19-";
+      else
+        echo "Unsupported architecture" > /dev/stderr;
+        exit 1;
+      fi;
+      "${INPUT}/build_abi_test_binaries_with_msvc.sh"
+        "${INPUT}"
+        "${OUTPUT}"
+        "${TRIPLE}"
+        "$${MSVC_TRIPLE}"
+        "${GCC_CFLAGS} ${COMMON_CFLAGS}"
+        "${MSVC_CFLAGS} ${COMMON_CFLAGS}"
+        "${MSVC_LDFLAGS}";
