Introduce function and argument counts
Function count is there for detecting if linker is removing some stuff
it's not supposed to again.

Maximum argument size and count give extra piece of mind about tests
"exploding" because the allocated memory was not enough.

--- a/scripts/abi_artifact_generator/config/common.yml
+++ b/scripts/abi_artifact_generator/config/common.yml
@@ -1,4 +1,6 @@
 ---
 stack_byte_count: 512
+maximum_argument_count: 32
+maximum_argument_size: 256 # bytes
 lfsr_seed: "0x3141592653589793"
 iteration_count: 5
