--- a/share/revng/test/configuration/revng-qa/for-import-pe.yml
+++ b/share/revng/test/configuration/revng-qa/for-import-pe.yml
@@ -29,7 +29,7 @@ commands:
         filter: windows
     pool: wine
     command: |-
-      timeout 30 x86_64-winsdk-vc16-cl z:\$INPUT /Fe$OUTPUT $CFLAGS /link $LDFLAGS
+      timeout 30 i386-winsdk-vc16-cl z:\$INPUT /Fe$OUTPUT $CFLAGS /link $LDFLAGS
   - type: revng-qa.generated-pdb
     from:
       - type: source
@@ -37,4 +37,4 @@ commands:
     suffix: .pdb
     pool: wine
     command: |-
-      timeout 30 x86_64-winsdk-vc16-cl z:\$INPUT $CFLAGS /link /pdb:$OUTPUT $LDFLAGS
+      timeout 30 i386-winsdk-vc16-cl z:\$INPUT $CFLAGS /link /pdb:$OUTPUT $LDFLAGS
